# AlgoEng-WS24-25

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  AlgoEngPKSS  CMakeLists.txt  README.md  build.ps1  build.sh  gendata.sh
EM_MergeSort/src/: CMakeLists.txt
Exercise1/: ae_title.tex  evaluation.md  gendata.sh  report.tex  run.sh
Exercise1/graph/: Percentage10.csv  Percentage50.csv
Exercise2/: evaluation.md  exp1.ps1  exp2.ps1  experiment_01.ps1  experiment_01.sh  experiment_02.ps1  experiment_02.sh  report.tex
Exercise2/figures/: merge_sort_even.drawio  merge_sort_odd.drawio  parallel_quick_sort.drawio
Exercise2/report/: report.tex
Exercise2/results/: Calc.Rmd  Calc.nb.html  experiment_01_simon_laptop.csv  experiment_01_simon_pc.csv  experiment_02_simon_laptop.csv  experiment_02_simon_pc.csv  specs_simon_laptop.txt  specs_simon_pc.csv
Exercise2/src/ParallelSort/: CMakeLists.txt  main.cpp
FileGenerator/src/: CMakeLists.txt  main.cpp  main.h
FileReader/src/: CMakeLists.txt  fileReader.cpp  fileReader.h
lib/IO/: CMakeLists.txt  fileReader.cpp  fileReader.h  fileWriter.cpp  fileWriter.h
lib/MergeSort/: CMakeLists.txt  mergeSort.cpp  mergeSort.h
lib/Sort/: CMakeLists.txt  all.h  introSort.cpp  introSort.h  introsort.cpp  introsort.h  mergeSort.cpp  mergeSort.h  quickSort.cpp  quickSort.h
lib/Utils/: CMakeLists.txt  numberGen.cpp  numberGen.h  numberGen32.cpp  numberGen32.h  semaphoreTracker.cpp  semaphoreTracker.h  threadPool.cpp  threadPool.h
src/: CMakeLists.txt  file_generator.cpp
src/EM_MergeSort/: CMakeLists.txt  main.cpp  main.h
src/FileAnalyzer/: CMakeLists.txt  main.cpp  main.h
src/FileGenerator/: CMakeLists.txt  main.cpp  main.h
src/ParalellSort/: CMakeLists.txt  main.cpp  main.h
src/ParallelSort/: main.cpp  main.h
submissions/sample/: report.tex
